Add SIMD utilities